test/langtools/tools/javac/datum/SubDatumFieldsMustBeAPrefixOfParentTest.out
SubDatumFieldsMustBeAPrefixOfParentTest.java:9:45: compiler.err.cant.extend.datum: (compiler.misc.super.field.mismatch: int, x, int, y)
1 error
